--- a/2018-10-11/index.html
+++ b/2018-10-11/index.html
@@ -6,47 +6,20 @@
 		<title></title>
 		<style>
 			body {
-				background-color: white;
+				background: blue;
 			}
 			.snow {
-				background:black;
+				background:white;
 				border-radius: 100%;
 				position: fixed;
 			}
-		#a{
-			height: 5px;
-			width: 500px;
-			position: absolute;
-			left: 100px;
-			bottom: 125px;
-			background: red;
-		}
-		#b{
-			height: 75px;
-			width: 5px;
-			position: absolute;
-			top: 200px;
-			left: 280px;
-			background: blue;
-		}
-			#c{
-			height: 75px;
-			width: 5px;
-			position: absolute;
-			top: 195px;
-			left: 370px;
-			background: blue;
-		}
+	
 				
 		</style>
 	</head>
 
 	<body>
-		<div id="a"></div>
-		<div id="b"></div>
-			<div id="c"></div>
-		<img src="img/xuxu.jpg" />
-		<h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;一起来敲代码吧！！！</h1>
+		
 		<script type="text/javascript">
 			var snow;
 			
@@ -63,11 +36,11 @@
 					this.size = ran(5, 18, false);
 					this.alpha = ran(0.3, 1, false);
 					this.blur = ran(0, 2, false);
-					this.x = ran(200, 450, true);
-					this.y = ran(50, 150, true);
+					this.x = ran(-5, 5, true);
+					this.y = ran(-hig/2,0, true);
 					this.z = ran(0, 20, true);
 					this.speed = ran(2, 5, false);
-					this.wind = ran(-3, 10, false);
+					this.wind = ran(-3, 3, false);
 					this.o = null;
 				}
 				draw() {
@@ -88,7 +61,7 @@
 					this.x += this.wind;
 					else this.x -= this.wind;
 					this.y -= this.speed;
-					if (this.y > hig) 	this.y = ran(50, 150, true);
+					if (this.y > hig)  this.y = ran(-hig/2,0, true);	
 					this.o.style.left = this.x + "px";
 					this.o.style.top = this.y + "px";
 				}
